--- a/samples/SampleProgram1/SampleProgram1.csproj
+++ b/samples/SampleProgram1/SampleProgram1.csproj
@@ -49,15 +49,15 @@
   <ItemGroup>
     <Content Include="..\..\SCCISharp\scci\License.txt">
       <Link>License.txt</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\SCCISharp\scci\scci.dll">
       <Link>scci.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\SCCISharp\scci\scciconfig.exe">
       <Link>scciconfig.exe</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
