--- a/SCCISharp/SCCISharp.vcxproj.filters
+++ b/SCCISharp/SCCISharp.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="SoundChip.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SetRegisterEventArgs.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
